infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c-web-socket-server
  labels:
    app.kubernetes.io/name: c-web-socket-server
    app.kubernetes.io/part-of: iot-p3
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: c-web-socket-server
                port:
                  name: tcp-chat
